# trillium

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  _CoqProject  coq-trillium.opam  flake.nix
aneris/algebra/: ballot.v
aneris/aneris_lang/: adequacy.v  lang.v  lifting.v  proofmode.v
aneris/lib/: dfrac_oneshot.v
aneris/prelude/: collect.v  gset_map.v  sig_gset.v  strings.v
fairis/: fair_termination.v  fairness_finiteness.v  fuel.v  fuel_termination.v  inftraces.v  map_included_utils.v  resources.v  resources_alt.v
fairis/heap_lang/: adequacy.v  lang.v  lifting.v  proofmode.v
fairneris/: adequacy.v  env_model.v  env_model_project.v  fair_resources.v  fairness.v  from_locale_utils.v  fuel.v  fuel_jm_scheduling_fairness.v  inftraces.v  ltl_lite.v  mu_calculus_lite.v  partial_termination.v  partial_termination_alt.v  resources.v  testbed.v  trace_utils.v
fairneris/aneris_lang/: adequacy.v  aneris_lang.v  base_lang.v  lang.v  lifting.v  network.v  network_model.v  proofmode.v  resources.v  tactics.v
fairneris/examples/: no_drop_dup.v  no_drop_dup_model.v  retransmit_example.v  retransmit_example_adequacy.v  retransmit_model.v  retransmit_model_base.v  retransmit_model_ltl.v  retransmit_model_progress.v  retransmit_model_progress_ltl.v  stenning_code.v  stenning_example_adequacy.v  stenning_model.v
fairneris/lib/: dfrac_oneshot.v  gen_heap_light.v  singletons.v
fairneris/prelude/: strings.v
trillium/events/: event.v
trillium/prelude/: finitary.v  relations.v
trillium/program_logic/: adequacy.v  ectx_language.v  ectx_lifting.v  ectxi_language.v  (+4 more)
(+46 files in other folders)
